[package]
name = "swc_plugin_fetch_macro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
swc_core = { version = "0.29.*", features = ["plugin_transform"] }

# [alias]
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
# Alias to build actual plugin binary for the specified target.
# build-wasi = "build --target wasm32-wasi"
# build-wasm32 = "build --target wasm32-unknown-unknown"
